# 261RCOSE46101

./: .env.example  .gitignore  ASSIGNMENT_REQUIREMENTS.md  AUTONOMOUS_INTEGRATION.md  AWS_PERFORMANCE_PLAN.md  DEVIATIONS_FROM_PPT.md  EVALUATOR_FALLBACK.md  MOTIVATION_v2.md  Makefile  ORBT_INTEGRATION.md  README.md  REMAINING_FILES_TO_PUSH.md  SETUP.md  pyproject.toml
COSE461_Project_Final_Report_Template__2026_-1/: template.tex
agents/: analyst.py  critic.py  data_steward.py  experiment_runner.py  librarian.py  principal_investigator.py  qa_meta.py  runner.py  writer.py
config/: agents.yaml  eval_5way.json  models.yaml  rubric.yaml
decisions/: 2026-05-24-autonomy-architecture.md  2026-05-24-baseline-failures-observed.md  2026-05-24-daily_digest-7a9432be.md  2026-05-24-known-risks.md  2026-05-24-lineage_audit-574b50d2.md  2026-05-24-nxtgen-aws-probe.md  2026-05-24-v2-motivation-kpi-self-eval.md  2026-05-26-benchmark-improvement-strategy.md  2026-05-26-consumer-prediction-deployment.md  2026-05-26-controlled-study-findings.md  2026-05-26-cultural-pivot-parallel-aws.md  2026-05-26-koalpaca-negative-result.md  2026-05-26-phase1-revised-findings.md  2026-05-26-ppt-vs-current-divergence-analysis.md  2026-05-26-quantization-confound.md  2026-05-26-r4-bas-composite-decision.md
docker/: Dockerfile.dashboard  Dockerfile.slackbot  docker-compose.yml
notebooks/: 01_layer1_smoke_test.py
orchestrator/: budget.py  queue.py  router.py  scheduler.py
prompts/: critic.md  data_steward.md  principal_investigator.md  qa_meta.md  writer.md
reports/: AI_USAGE_DISCLOSURE.md  (+7 more)
(+341 files in other folders)
